# crawling-filter-berita

./: README.md  data-crawling.py  function_scraping.py  get-list-wilayah-by-provinsi.py  link_scrapping.py  prod_crawling_kekeringan_lokasi.ipynb  scraping_detik_news.py  scrapping-counter-desa-kabupaten-from-link.py  search-link-acquisition.py
main_program/: helper.py  main.py  scraping_utility.py  search_with_pagination.py
main_program_all_in_bing/: helper.py  link_interface.py  main.py  scraping_utility.py  search_with_pagination.py
module_program/: scraping_link.py  search_with_pagination.py
module_program/date_helper/: date_convert_format.py
module_program/driver/: driver_helper.py
module_program/interface/: link_interface.py
module_program/keyword_helper/: keyword_counter_html.py
module_program/scraping_helper/: scrape_link_info.py  scrape_search_result.py  search_with_pagination.py
replit backup/: bing_helper.py  gsheet_helper.py  helper.py  kajian-ufuk-indonesia-b1e63d302e2e.json  keyword_counter_helper.py  link_interface.py  main.py  main_backup.py  main_module.py  main_normal.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  scraping_link.py  search_with_pagination.py
