[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
selenium = "^4.16.0"
requests = "^2.31.0"
webdriver-manager = "^4.0.1"
bs4 = "^0.0.1"
helper = "^2.5.0"
pygsheets = "^2.0.6"
pandas = "^2.1.4"
python-interface = "^1.6.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
beautifulsoup4 = "^4.12.3"
numpy = "^1.26.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"